# scpi-parser

./: meson.build
libscpi/: install_vfat.sh  meson.build
libscpi/inc/scpi/: parser.h  types.h
libscpi/src/: parser.c  units.c  utils.c  utils_private.h
